--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-config.xml
-hooks
 node_modules
-package-lock.json
-package.json
 platforms
 plugins
-res
-www
+.DS_Store
+*.xcuserdatad
+package-lock.json
