--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
+        "@auth0/cordova": "^0.3.0",
+        "auth0-js": "^9.6.1",
         "cordova-android": "^7.0.0",
         "cordova-browser": "^5.0.3",
         "cordova-ios": "^4.5.4",
+        "cordova-plugin-customurlscheme": "^4.3.0",
+        "cordova-plugin-safariviewcontroller": "^1.5.4",
         "cordova-plugin-whitelist": "^1.3.3"
     },
     "cordova": {
         "plugins": {
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-safariviewcontroller": {},
+            "cordova-plugin-customurlscheme": {
+                "URL_SCHEME": "io.cordova.hellocordova-agalabs",
+                "ANDROID_SCHEME": "io.cordova.hellocordova-agalabs",
+                "ANDROID_HOST": "cordova.auth0.com",
+                "ANDROID_PATHPREFIX": "/cordova/io.cordova.hellocordova-agalabs/callback"
+            }
         },
         "platforms": [
             "browser",
